--- a/project.config.json
+++ b/project.config.json
@@ -39,10 +39,11 @@
 		"showES6CompileOption": false,
 		"useCompilerPlugins": false,
 		"ignoreUploadUnusedFiles": true,
-		"useStaticServer": true
+		"useStaticServer": true,
+		"condition": false
 	},
-	"appid": "wxb100b44af794708e",
-	"projectname": "Multi多功能平台",
+	"appid": "wxf05afcf29693cc75",
+	"projectname": "红草地专用",
 	"libVersion": "2.17.0",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
