--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,10 +1,24 @@
 {
 	"setting": {
-		"compileHotReLoad": false,
-		"urlCheck": false
+		"compileHotReLoad": true,
+		"urlCheck": false,
+		"bigPackageSizeSupport": true,
+		"preloadBackgroundData": false
 	},
 	"description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-	"projectname": "婚纱影楼GitHub",
-	"condition": {},
+	"projectname": "WeWedding",
+	"condition": {
+		"miniprogram": {
+			"list": [
+				{
+					"name": "",
+					"pathName": "projects/B00/pages/admin/index/home/admin_home",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				}
+			]
+		}
+	},
 	"libVersion": "2.17.0"
 }
